fixed chat window overflow glitch

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,8 @@
+#messageArea {
+  height: 100%;
+  overflow-y: auto;
+}
+
 @media (min-width: 992px) {
   .navbar-expand-lg .navbar-collapse {
       display: flex!important;
